--- a/.github/workflows/bitrise.yml
+++ b/.github/workflows/bitrise.yml
@@ -14,6 +14,12 @@ jobs:
     if: contains(github.event.comment.html_url, '/pull/') && startsWith(github.event.comment.body, '/submit')
     steps:
       - name: Get branch name
-        id: branch_name
+        id: upstreambranch
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo ${{ github.event.issue.pull_request.url }}
+          echo "::set-output name=branchname::$(curl -H "Authorization: token ${GITHUB_TOKEN}" ${{ github.event.issue.pull_request.url }} | jq '.head.ref' | sed 's/\"//g')"
+        
+      - name: Display branch name
+        run: |
+          echo ${{ steps.upstreambranch.outputs.branchname }}
