--- a/.github/workflows/bitrise.yml
+++ b/.github/workflows/bitrise.yml
@@ -31,4 +31,5 @@ jobs:
           BITRISE_TOKEN: ${{ secrets.BITRISE_TOKEN }}
         run: |
           echo "https://api.bitrise.io/v0.1/apps/${BITRISE_SLUG}/builds"
+          echo $(curl -X GET -H "Authorization: token ${GITHUB_TOKEN}" ${{ https://api.bitrise.io/v0.1/apps/${BITRISE_SLUG}/builds }})
         
