--- a/.github/workflows/bitrise.yml
+++ b/.github/workflows/bitrise.yml
@@ -25,12 +25,26 @@ jobs:
           echo ${{ steps.upstreambranch.outputs.branchname }}
           
       - name: Create bitrise API call
+        id: call_bitrise_api
         if: startsWith(steps.upstreambranch.outputs.branchname, 'release')
         env:
           BITRISE_SLUG: ${{ secrets.BITRISE_SLUG }}
           BITRISE_TOKEN: ${{ secrets.BITRISE_TOKEN }}
-          BITRISE_EMPTY_WORKFLOW: ${{ secrets.BITRISE_EMPTY_WORKFLOW }}
+          BITRISE_EMPTY_WORKFLOW: "Empty-workflow"
         run: |
           echo "https://api.bitrise.io/v0.1/apps/${BITRISE_SLUG}/builds"
-          echo $(curl -X POST "https://api.bitrise.io/v0.1/apps/${BITRISE_SLUG}/builds" -H "accept: application/json" -H "Authorization: ${BITRISE_TOKEN}" -H "Content-Type: application/json" -d "{ \"build_params\": { \"branch\": \"${{ steps.upstreambranch.outputs.branchname }}\", \"workflow_id\": \"${BITRISE_EMPTY_WORKFLOW}\" }, \"hook_info\": { \"type\": \"bitrise\" }}")
+          echo "::set-output name=result::$(curl -X POST "https://api.bitrise.io/v0.1/apps/${BITRISE_SLUG}/builds" -H "accept: application/json" -H "Authorization: ${BITRISE_TOKEN}" -H "Content-Type: application/json" -d "{ \"build_params\": { \"branch\": \"${{ steps.upstreambranch.outputs.branchname }}\", \"workflow_id\": \"${BITRISE_EMPTY_WORKFLOW}\" }, \"hook_info\": { \"type\": \"bitrise\" }}")"
         
+      - name: Post comment
+        if: startsWith(steps.upstreambranch.outputs.branchname, 'release') && success()
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: 'bitrise API実行結果\n<details>\n<summary>詳細</summary>\n\n```\n${{ steps.call_bitrise_api.outputs.result }}\n```\n</details>',
+            });
+          
