--- a/.github/workflows/echo.yml
+++ b/.github/workflows/echo.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - name: get_swift_version
         run: |
+          swift --version
           swift_version=`swift --version`
           echo "::set-output name=swift_version::$swift_version"
 
