--- a/.github/workflows/echo.yml
+++ b/.github/workflows/echo.yml
@@ -9,7 +9,7 @@ jobs:
       - name: get_swift_version
         run: |
           swift --version
-          swift_version=`swift --version`
+          swift_version=$(swift --version)
           echo "::set-output name=swift_version::$swift_version"
 
       - name: debug
