--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,3 +14,13 @@ jobs:
         run: |
           git rev-parse HEAD
           echo ${{ github.event.pull_request.head.ref }}
+      - name: Add diff
+        run: |
+          echo hoge >> hoge.txt
+      - name: Commit
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add .
+          git commit -m "New commit"
+          git push
