--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,10 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
       - name: Check
         run: |
           git rev-parse HEAD
-          echo ${{ github.event.pull_request.head.ref }}
+          echo ${{ github.event.pull_request.head.sha }}
       - name: Add diff
         run: |
           echo hoge >> hoge.txt
