--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -11,12 +11,13 @@ jobs:
           # For posting a rich message using Block Kit
           payload: |
             {
-              "text": "SwiftFormat daily ",
-              "attachments": [{
-                "title": ":x: ${{ github.workflow }} #${{ github.run_number }}",
-                "title_link": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
-                "color": "#ff0000"
-                }]
+              "text": "SwiftFormat daily",
+              "attachments": [
+                {
+                  "title": ":x: ${{ github.workflow }} #${{ github.run_number }}",
+                  "title_link": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
+                  "color": "#ff0000"
+                }
               ]
             }
         env:
