--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -9,8 +9,8 @@ jobs:
     steps:
       - name: Status
         run: |
-          echo "success"
-          exit 0
+          echo "failure"
+          exit 1
       - name: something step
         run: |
           echo "something"
