--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Get tag
         id: get_tag
         run: |
-          echo ::set-output name=tag::${GITHUB_REF#refs/tags/}
+          echo "{tag}={${GITHUB_REF#refs/tags/}}" >> $GITHUB_OUTPUT
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
