--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
           : # https://github.com/orgs/community/discussions/26686
           echo ${GITHUB_REF}
           echo ${{github.ref_name}}
-          if [[ ${GITHUB_REF#refs/tags/} == *"refs/heads/"* ]]; then
+          if [[ ${{ github.ref }} == *"refs/heads/"* ]]; then
             echo "Please select tag"
             exit 1
           fi
