--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,5 +50,10 @@ jobs:
         with:
           ref: ${{ steps.get_tag.outputs.tag }}
       - name: Execute script
+        id: script
         run: |
-          ./bin/script.sh -j ${{ inputs.job }} -r ${{ steps.get_tag.outputs.tag }} -f ${{ inputs.build_flavor }} -p ${{ inputs.priority }}
+          response=$(./bin/script.sh -j ${{ inputs.job }} -r ${{ steps.get_tag.outputs.tag }} -f ${{ inputs.build_flavor }} -p ${{ inputs.priority }})
+          echo "response=${response}" >> $GITHUB_OUTPUT
+      - name: echo
+        run: |
+          echo ${{ steps.script.outputs.response }}
