--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,10 +41,10 @@ jobs:
           : # https://github.com/orgs/community/discussions/26686
           echo ${GITHUB_REF}
           echo ${{github.ref_name}}
-          if [[ ${{ github.ref }} == *"refs/heads/"* ]]; then
-            echo "Please select tag"
-            exit 1
-          fi
+          : #if [[ ${{ github.ref }} == *"refs/heads/"* ]]; then
+          : #  echo "Please select tag"
+          : #  exit 1
+          : #fi
           echo "tag=${{github.ref_name}}" >> $GITHUB_OUTPUT
       - uses: actions/checkout@v4
         with:
@@ -53,6 +53,7 @@ jobs:
         id: script
         run: |
           response=$(./bin/script.sh -j ${{ inputs.job }} -r ${{ steps.get_tag.outputs.tag }} -f ${{ inputs.build_flavor }} -p ${{ inputs.priority }})
+          echo $response
           echo "response=${response}" >> $GITHUB_OUTPUT
       - name: echo
         run: |
