--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,7 @@ jobs:
           echo "result=${result}" >> $GITHUB_OUTPUT
       - name: echo
         run: |
-          echo "${{ steps.script.outputs.response }}"
+          echo "${{ steps.script.outputs.result }}"
       - name: Send GitHub Action trigger message
         if: success()
         uses: slackapi/slack-github-action@v1.24.0
@@ -92,7 +92,7 @@ jobs:
                     },
                     {
                       "title": "build_url",
-                      "value": "${{ steps.request_release.outputs.result }}"
+                      "value": "${{ steps.script.outputs.result }}"
                     }
                   ]
                 }
