--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,10 +53,11 @@ jobs:
         id: script
         run: |
           result=$(./bin/script.sh -j ${{ inputs.job }} -r ${{ steps.get_tag.outputs.tag }} -f ${{ inputs.build_flavor }} -p ${{ inputs.priority }} | grep build_url)
-          echo "result=${result}" >> $GITHUB_OUTPUT
+          build_url=$(echo $result cut -d '"' -f4)
+          echo "build_url=${build_url}" >> $GITHUB_OUTPUT
       - name: echo
         run: |
-          echo "${{ steps.script.outputs.result }}"
+          echo "${{ steps.script.outputs.build_url }}"
       - name: Send GitHub Action trigger message
         if: success()
         uses: slackapi/slack-github-action@v1.24.0
@@ -92,7 +93,7 @@ jobs:
                     },
                     {
                       "title": "build_url",
-                      "value": "${{ steps.script.outputs.result }}"
+                      "value": "${{ steps.script.outputs.build_url }}"
                     }
                   ]
                 }
