--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
           : # https://github.com/orgs/community/discussions/26686
           echo ${GITHUB_REF}
           echo ${{github.ref_name}}
-          if [[ ${{ github.ref }} == *"refs/heads/"* ]] && [[ ${{ inputs.build_flavor == 'production' }} ]]; then
+          if [[ ${{ github.ref }} == *"refs/heads/"* ]] && [[ ${{ inputs.build_flavor }} = 'production' ]]; then
             echo "Please select tag"
             exit 1
           fi
