--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ on:
       build_flavor:
         description: 'Build Flavor'
         required: true
+        default: 'staging'
         type: choice
         options:
           - development
