--- a/.github/workflows/swiftformat.yml
+++ b/.github/workflows/swiftformat.yml
@@ -16,6 +16,8 @@ jobs:
 
       - name: Format
         run: |
-          echo "$HOME/bin/mint" >> $GITHUB_PATH
+          echo "$HOME/bin"
+          echo "$HOME/bin" >> $GITHUB_PATH
+          echo $GITHUB_PATH
           mint help
         
