--- a/.github/workflows/swiftformat.yml
+++ b/.github/workflows/swiftformat.yml
@@ -13,7 +13,9 @@ jobs:
       - uses: irgaly/setup-mint@v1
         with:
           bootstrap: false
-      - run: echo "$HOME/bin" >> $GITHUB_PATH
+          
+      - name: Add $HOME/bin to path
+        run: echo "$HOME/bin" >> $GITHUB_PATH
 
       - name: Format
         run: |
