--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -15,6 +15,7 @@ jobs:
         run: |
           echo "something"
       - name: create json
+        if: always()
         run: |
           jq -n --arg text `echo hoge` --argjson data "$(jq -n --arg title "${{ github.workflow }} #${{ github.run_number }}" --arg title_link "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" '{ title: $title, title_link: $title_link }')" '{ text: $text | attachments: $data}'
       - name: Send GitHub Action trigger message
