--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -16,8 +16,17 @@ jobs:
           echo "something"
       - name: create json
         if: always()
-        run: |
-          jq -n --arg text `echo hoge` --argjson data "$(jq -n --arg title "${{ github.workflow }} #${{ github.run_number }}" --arg title_link "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" '{ title: $title, title_link: $title_link }')" '{ text: $text , attachments: $data}'
+        run: >
+          jq -n
+          --arg text `echo hoge`
+          --argjson data "$(
+            jq -n 
+            --arg title "${{ github.workflow }} #${{ github.run_number }}"
+            --arg title_link "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+            --arg text "branch: ${{ github.event.pull_request.head.ref }}"
+            '{ title: $title, title_link: $title_link, color: "#ff0000", text: $text }'
+          )"
+          '{ text: $text , attachments: $data}'
       - name: Send GitHub Action trigger message
         if: failure()
         uses: slackapi/slack-github-action@v2.0.0
