--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -19,12 +19,12 @@ jobs:
         run: >
           jq -n
           --arg text `echo hoge`
-          --argjson data "$(
-            jq -n 
-            --arg title "${{ github.workflow }} #${{ github.run_number }}"
-            --arg title_link "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-            --arg text "branch: ${{ github.event.pull_request.head.ref }}"
-            '{ title: $title, title_link: $title_link, color: "#ff0000", text: $text }'
+          --argjson data "$( \
+            jq -n \
+            --arg title "${{ github.workflow }} #${{ github.run_number }}" \
+            --arg title_link "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" \
+            --arg text "branch: ${{ github.event.pull_request.head.ref }}" \
+            '{ title: $title, title_link: $title_link, color: "#ff0000", text: $text }' \
           )"
           '{ text: $text , attachments: $data}'
       - name: Send GitHub Action trigger message
