--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -18,14 +18,14 @@ jobs:
         if: always()
         run: >
           jq -n
-          '{ \
-            "text": "hoge",\\
-            "attachments": [ \
-              { \
-                "title": " #run_number", \
-                "title_link": "server_url/repository/actions/runs/run_id" \
-              } \
-            ] \
+          '{ 
+            "text": "hoge",
+            "attachments": [
+              { 
+                "title": " #run_number", 
+                "title_link": "server_url/repository/actions/runs/run_id" 
+              } 
+            ] 
           }'
           > payload.json
       - name: check
