--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -18,15 +18,15 @@ jobs:
         if: always()
         run: >
           jq -n
-          '{ 
-            "text": "hoge",
+          "{ 
+            "text": `echo hoge`,
             "attachments": [
               { 
                 "title": " #run_number", 
                 "title_link": "server_url/repository/actions/runs/run_id" 
               } 
             ] 
-          }'
+          }"
           > payload.json
       - name: check
         if: always()
